--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -10,7 +10,7 @@
 
   .v-image__image {
     &:before {
-      content: '';
+      content: "";
       background: rgba(0, 0, 0, 0.3);
       position: absolute;
       top: 0;
@@ -34,6 +34,6 @@
   background: darken($white, 2%);
 
   .v-card__title {
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
   }
 }
