--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,13 +1,13 @@
 $black: #000;
 $white: #fff;
 
-$base-font-sans-serif: 'Montserrat', 'Arial', sans-serif;
-$base-font-serif: 'Times New Roman', 'Georgia', serif;
+$base-font-sans-serif: "Montserrat", "Arial", sans-serif;
+$base-font-serif: "Times New Roman", "Georgia", serif;
 
 $primary-font: $base-font-sans-serif;
 
 // Body
-$base-text-color: $black  !default;
+$base-text-color: $black !default;
 $base-background-color: $white !default;
 $base-font-size: 14px !default;
 $base-line-height: 1.8 !default;
@@ -31,4 +31,4 @@ $h6-font-size: 15px !default;
 $headings-font-family: $primary-font !default;
 $headings-color: inherit !default;
 
-$animation-speed: 0.3s; 
+$animation-speed: 0.3s;
